updated project and file names

--- a/index.html
+++ b/index.html
@@ -158,9 +158,12 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Zelda II: The Adventure Of Link Engine</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A faithful remake from the ground up of Zelda II in C# and the .NET framework.
+                            Devloped as a team of 5, with a heavy empahisis on Agile development, enforced using
+                            sprints, code reviews, and code metrics. This does not impement all dungeons, but provides
+                            a polished framework for creating new dungeons seamlessey, as well as new items, enemies, etc.
                         </p>
                         <a href="#">View Project</a>
                     </div>
