--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/zelda2santalink.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -173,6 +173,26 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/Memory Cube Poster.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Memory Cube</h3>
+                        <p>
+                            My first game built in Unity! I wanted to make a brain trainer game, so 
+                            this game shows you a tile path you need to follow, then the path dissapears
+                            and you must roll your cube accross the finish line. Multiple levels with increasing
+                            difficulty.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <!--START PROJECT TEMPLATE-->
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
@@ -185,7 +205,8 @@
                     </div>
                     <!-- End .project-info -->
                 </div>
-                <!-- End .project -->
+                <!-- End PROJECT TEMPLATE -->
+
             </div>
         </div>
     </div>
