added some projects and more skill

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             sprints, code reviews, and code metrics. This does not impement all dungeons, but provides
                             a polished framework for creating new dungeons seamlessey, as well as new items, enemies, etc.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/BrandonW03/CSE3902-TeamThunderbird">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -184,7 +184,7 @@
                             and you must roll your cube accross the finish line. Multiple levels with increasing
                             difficulty.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/HudsonReid/MemoryCube">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -219,10 +219,11 @@
             <li>C</li>
             <li>C#</li>
             <li>x86-64 Assembly</li>
-            <li>NEWSKILL</li>
-            <li>NEWSKILL</li>
-            <li>NEWSKILL</li>
-            <li>NEWSKILL</li>
+            <li>.NET</li>
+            <li>OpenGL</li>
+            <li>Unity</li>
+            <li>Unreal Engine</li>
+            <li>Microsoft Suite</li>
             <li>NEWSKILL</li>
             <li>NEWSKILL</li>
             <li>NEWSKILL</li>
