everything everywhere all at once

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Hudson Reid</h1>
-            <h2>Software Engineer</h2>
+            <h2>Software Engineer / Game Programmer</h2>
             <a href="PDFS/RESUME 9-17-2024.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -89,29 +89,23 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
+            <div data-date="May 2024 - Present">
+                <h3>The Ohio State University</h3>
                 <h4>Job Title</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
             </div>
 
+            <!-- EXPERIENCE TEMPLATE
             <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
-            </div>
+            </div> -->
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
         </div>
     </div>
     <!-- End #experience -->
@@ -119,7 +113,7 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>The Ohio State University</h3>
+            <h3><b>The Ohio State University</b></h3>
             <span class="education-date">August 2021 - December 2025</span>
             <h4><b>B.S. in Computer Science Engineering</b> Specialization In Computer Graphics And Game Design</h4>
             <h5>Minor In Game Studies</h5>
