added job desciprotn and corrrect form link

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <div id="experience-timeline">
             <div data-date="May 2024 - Present">
                 <h3>The Ohio State University</h3>
-                <h4>Job Title</h4>
+                <h4>C++ Undergraduate Teaching Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Undergraduate Teaching Assistant / Grader for C++ course. Helped introduce students to C++ with a focus on good programming practices, vectors, classes, and object orientated programming.
                 </p>
             </div>
 
@@ -230,7 +230,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/hudsonbrycereid@gmail.com">
+            <form method="POST" action="https://formspree.io/f/mnnnoywn">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
