--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <a href="#about">About</a>
             </li>
             <li>
+                <a href="#skills">Skills</a>
+            </li>
+            <li>
                 <a href="#experience">Experience</a>
             </li>
             <li>
@@ -35,9 +38,6 @@
             </li>
             <li>
                 <a href="#projects">Projects</a>
-            </li>
-            <li>
-                <a href="#skills">Skills</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -86,6 +86,26 @@
     </div>
     <!-- End #about -->
 
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>C++</li>
+            <li>C</li>
+            <li>C#</li>
+            <li>x86-64 Assembly</li>
+            <li>.NET</li>
+            <li>OpenGL</li>
+            <li>Unity</li>
+            <li>Unreal Engine</li>
+            <li>Microsoft Suite</li>
+            <li>NEWSKILL</li>
+            <li>NEWSKILL</li>
+            <li>NEWSKILL</li>
+            <li>NEWSKILL</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
+
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
@@ -123,6 +143,7 @@
         </div>
         <!-- End .education-block -->
 
+        <!-- START EDUCATIO)N TEMPLATE
         <div class="education-block">
             <h3>University of Ottawa</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
@@ -139,7 +160,8 @@
                 </li>
             </ul>
         </div>
-        <!-- End .education-block -->
+        End .education-template -->
+
     </div>
     <!-- End #education -->
 
