removed old skills and project template

--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
                 </div>
                 <!-- End .project -->
 
-                <!--START PROJECT TEMPLATE-->
+                <!--START PROJECT TEMPLATE
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project.jpg" />
                     </div>
-                    <!-- End .project-image -->
+                    <!- - End .project-image - ->
                     <div class="project-info">
                         <h3>Project Name Here</h3>
                         <p>
@@ -220,34 +220,14 @@
                         </p>
                         <a href="#">View Project</a>
                     </div>
-                    <!-- End .project-info -->
+                    <!-  - End .project-info -  ->
                 </div>
-                <!-- End PROJECT TEMPLATE -->
+                End PROJECT TEMPLATE -->
 
             </div>
         </div>
     </div>
     <!-- End #projects -->
-
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
-        <ul>
-            <li>C++</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>x86-64 Assembly</li>
-            <li>.NET</li>
-            <li>OpenGL</li>
-            <li>Unity</li>
-            <li>Unreal Engine</li>
-            <li>Microsoft Suite</li>
-            <li>NEWSKILL</li>
-            <li>NEWSKILL</li>
-            <li>NEWSKILL</li>
-            <li>NEWSKILL</li>
-        </ul>
-    </div>
-    <!-- End #skills -->
 
     <div id="contact">
         <h2>Get in Touch</h2>
