--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
             <li>
                 <a href="#contact">Contact</a>
             </li>
-            <li>
-                <a href="https://github.com/HudsonReid" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-            </li>
-            <li>
-                <a href="https://stackoverflow.com/users/22588969/hudson" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/hudsonreid/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            </li>
         </ul>
+            <ul class="social-icons">
+                <li>
+                    <a href="https://github.com/HudsonReid" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                    <a href="https://stackoverflow.com/users/22588969/hudson" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/hudsonreid/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                </li>
+            </ul>
     </header>
     <!-- End header -->
 
